# Image-Text-Matching-System

./: .gitignore  0921.py  README.md  example.py  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
configs/data/: coco_sample.yaml
configs/evaluation/: retrieval.yaml
configs/model/: clip_base.yaml
configs/training/: default.yaml
demo/: app.py
scripts/: train.py
src/: __init__.py
src/data/: __init__.py  dataset.py
src/eval/: __init__.py  evaluator.py  metrics.py
src/losses/: __init__.py  contrastive_loss.py
src/models/: __init__.py  clip_model.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  device.py  logging.py
src/viz/: __init__.py  visualizer.py
tests/: test_core.py
